--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,17 +1,33 @@
 body {
     font-family: Verdana;
-}
-
-header h1, h4 {
+    background-color: black;
+    color: white;
     text-align: center;
 }
 
+
 header h1 {
     font-size: 50px;
-    color: white;
+    font-weight: normal;
 }
 
-header h4 {
+.download {
     font-size: 16px;
     color: aquamarine;
+    font-weight: bold;
+}
+
+.description h1 {
+    font-size: 42px;
+    font-weight: 300;
+}
+
+.description h4 {
+    font-size: 21px;
+    color: gray;
+}
+
+footer {
+    text-align: right;
+    color: gray;
 }
